--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "src/loader.js",
   "scripts": {
     "dev": "nodemon",
-    "production": "pm2 start src/loader.js --name EveryApp_React"
+    "production": "pm2 start src/loader.js --name todo-app"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MenezesC137/EveryApp_React"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MenezesC137/EveryApp_React"
+  },
+  "homepage": "https://github.com/MenezesC137/EveryApp_React#readme",
   "dependencies": {
     "body-parser": "1.15.2",
     "express": "4.14.0",
